# ai4fm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  mirror.yml
src/: CNAME  conf.py  index.rst
src/_static/: custom.css
src/_static/css/: gallery.css
src/_static/demos/microwave/: index.html
src/_static/demos/microwave/assets/: index.css  index.js
src/_static/js/: gallery.js
src/_templates/: page.html
src/pages/: about.rst  funding.rst  index.rst  people.rst  prospective-students.rst
src/papers/: chattla-2026.rst  gcasr-2025-tla-llm.rst  gsirs-2026-tla-llm.rst  index.rst  llm-tla-evaluation.rst  tla-for-all.rst
src/posts/: chattla-presentation-2026.rst  figshare-llm-tla-poster-2026.rst  gcasr-2026-posters.rst  index.rst  interactive-microwave-tla.rst  llm-tla-accepted-2026.rst  llm-tla-evaluation-2025.rst  tla-for-all-running-model-checking-in-a-python-notebook.rst
